Prevented item cards from getting too big

--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ p {
 
     /* Grid container */
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 300px));
     grid-auto-rows: minmax(min-content, max-content);
     gap: 16px;
 
